<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/articleImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_image"
            android:contentDescription="@string/detailImage" />

        <TextView
            android:id="@+id/articleTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/ArticleTitle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/articleDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/ArticleDesc"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

    </LinearLayout>

</ScrollView>