<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.camera.CameraFragment">

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.camera.view.PreviewView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:indeterminateTint="@color/dark_green"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/gallery"
            app:layout_constraintStart_toStartOf="@+id/viewFinder"
            app:layout_constraintBottom_toBottomOf="@+id/captureImage"
            app:srcCompat="@drawable/ic_baseline_image_24" />

        <ImageView
            android:id="@+id/captureImage"
            android:contentDescription="@string/shutterCamera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_camera_24" />

        <ImageView
            android:id="@+id/switchCamera"
            android:contentDescription="@string/switchCamera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/captureImage"
            app:layout_constraintEnd_toEndOf="@+id/viewFinder"
            app:layout_constraintStart_toEndOf="@+id/captureImage"
            app:srcCompat="@drawable/ic_baseline_cameraswitch_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>